# isort

./: Cargo.toml  README.md
.github/workflows/: release.yaml
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/tests/: test1.txt  test2.txt  test3.txt
core/: Cargo.toml  README.md
core/src/: lib.rs
src/: main.rs
tests/: test1.txt  test2.txt
